src/FinancialForce Accounting/objects/codaRecordLock__c.object
<CustomObject>
    <customHelpPage>codahelprecordlock</customHelpPage>
    <description>An internal object that provides the ability to lock records.</description>
    <fields>
        <fullName>LockedRecordId__c</fullName>
        <description>The ID of the record that is locked.</description>
        <label>Locked Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LockedRecordKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A key containing both the purpose of the record lock and the ID of the record that is locked.</description>
        <label>Locked Record Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RecordLockGroup__c</fullName>
        <description>Identifies the group of record locks that this record lock is part of.</description>
        <label>Record Lock Group</label>
        <referenceTo>codaRecordLockGroup__c</referenceTo>
        <relationshipLabel>Record Locks</relationshipLabel>
        <relationshipName>RecordLocks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Record Lock</label>
    <nameField>
        <displayFormat>RL-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Locks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>